Allow services.xml variants on application instance name